Improved several modules and updated the README