@@ -18,6 +18,7 @@ import net.minecraft.network.status.server.S00PacketServerInfo;
 import net.minecraft.network.status.server.S01PacketPong;
 import org.apache.logging.log4j.LogManager;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 public enum EnumConnectionState {
@@ -182,7 +183,11 @@ public enum EnumConnectionState {
 
     public Packet<?> getPacket(EnumPacketDirection direction, int packetId) throws InstantiationException, IllegalAccessException {
         Class<? extends Packet<?>> oclass = this.directionMaps.get(direction).get(packetId);
-        return oclass == null ? null : oclass.newInstance();
+        try {
+            return oclass == null ? null : oclass.getConstructor().newInstance();
+        } catch (NoSuchMethodException | InvocationTargetException exception) {
+            throw new Error(exception);
+        }
     }
 
     public int getId() {
@@ -214,7 +219,7 @@ public enum EnumConnectionState {
                     }
 
                     try {
-                        oclass.newInstance();
+                        oclass.getConstructor().newInstance();
                     } catch (Throwable var10) {
                         throw new Error("Packet " + oclass + " fails instantiation checks! " + oclass);
                     }
